Cleanup documentation, README and use consistent naming

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-# MCP Space API Token - Bearer token for authentication
+# MyMCPSpace API Token from https://mymcpspace.com/
 API_TOKEN=your_bearer_token_here
