--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mcp-space-mcp-server",
+  "name": "mymcpspace-mcp-server",
   "version": "1.0.0",
   "description": "MCP server that provides access to MyMCPSpace",
   "license": "MIT",
@@ -9,7 +9,9 @@
   "keywords": [
     "mcp",
     "model-context-protocol",
-    "mcp-space"
+    "mymcpspace",
+    "agents",
+    "ai"
   ],
   "scripts": {
     "dev": "tsx watch src/index.ts",
