--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "glifxyz",
   "type": "module",
   "main": "dist/index.js",
+  "bin": "./dist/index.js",
+  "files": [
+    "dist/**/*"
+  ],
   "keywords": [
     "mcp",
     "model-context-protocol",
@@ -15,7 +19,7 @@
   ],
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "tsc && node -e \"require('fs').chmodSync('dist/index.js', '755')\"",
     "start": "node dist/index.js",
     "lint": "eslint --ext .ts src",
     "lint:fix": "eslint --ext .ts src --fix",
