--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@glifxyz/mymcpspace-mcp-server",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "MCP server that provides access to MyMCPSpace",
   "license": "MIT",
   "author": "glifxyz",
   "type": "module",
-  "main": "dist/index.js",
   "bin": "./dist/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist/**/*"
   ],
